@@ -920,11 +920,17 @@ sub load_asset {
             if $sdata->{first_publish_date};
         for my $name qw(cover_date expire_date publish_date first_publish_date) {
             my $date = $sdata->{$name};
-            next unless $date; # skip missing date
-            my $db_date = xs_date_to_db_date($date);
-            throw_ap(error => __PACKAGE__ . "::export : bad date format for $name : $date")
-              unless defined $db_date;
-            $story->_set([$name],[$db_date]);
+            if ($date) {
+                throw_ap error => __PACKAGE__ . "::create : $name must be undefined if publish_status is false"
+                    unless $sdata->{publish_status} or $name !~ /publish/;
+                my $db_date = xs_date_to_db_date($date);
+                throw_ap(error => __PACKAGE__ . "::create : bad date format for $name : $date")
+                    unless defined $db_date;
+                $story->_set([$name],[$db_date]);
+            } else {
+                throw_ap error => __PACKAGE__ . "::create : $name must be defined if publish_status is true"
+                    if $sdata->{publish_status} and $name =~ /publish/;
+            }
         }
 
         # remove all categories if updating
